--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </style>
   </head>
   <body>
-  <iframe src="https://geekprank.com/apple">
+  <iframe src="https://geekprank.com/apple/">
   </body>
 </html>
